--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,6 @@ env:
 jobs:
   test:
     env:
-      MONGODB_CLUSTER_ADDRESS: cluster0.sjsro17.mongodb.net
       MONGODB_USERNAME: ${{secrets.MONGODB_USERNAME}}
       MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
       PORT: 8080
@@ -34,6 +33,7 @@ jobs:
   deploy:
     needs: test
     runs-on: ubuntu-latest
+    environment: dev
     steps:
       - name: Output information
         run: |
